Actualización de los scripts

--- a/Python_Validation/EDA Disturbance_LowOutflow.ipynb
+++ b/Python_Validation/EDA Disturbance_LowOutflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6599941d",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
     }
    ],
    "source": [
-    "# Cargar y concatenar todos los CSV de la carpeta en un solo DataFrame\n",
+    "# Load and concatenate all CSV files in the folder into a single DataFrame\n",
     "import glob\n",
     "import os\n",
     "import sys\n",
@@ -722,52 +722,52 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "csv_files = glob.glob(os.path.join('.', '*.csv'))\n",
-    "print(f\"Encontrados {len(csv_files)} archivos CSV en la carpeta:\")\n",
+    "print(f\"Found {len(csv_files)} CSV files in the folder:\")\n",
     "for f in csv_files:\n",
     "    print(' -', f)\n",
     "\n",
     "if len(csv_files) == 0:\n",
-    "    print('No hay archivos CSV en la carpeta actual.')\n",
+    "    print('No CSV files found in the current folder.')\n",
     "else:\n",
     "    dfs = []\n",
     "    for f in csv_files:\n",
     "        try:\n",
     "            df = pd.read_csv(f)\n",
     "        except Exception as e:\n",
-    "            print(f\"Error leyendo {f}: {e}\")\n",
+    "            print(f\"Error reading {f}: {e}\")\n",
     "            continue\n",
-    "        # Añadir columna con nombre de archivo sin extensión para rastrear origen\n",
+    "        # Add filename (without extension) to track the source\n",
     "        df['archivo_origen'] = os.path.splitext(os.path.basename(f))[0]\n",
     "        dfs.append(df)\n",
     "\n",
-    "    # Concatenar todos los DataFrames\n",
+    "    # Concatenate all DataFrames\n",
     "    data = pd.concat(dfs, ignore_index=False)\n",
     "\n",
     "    data['Timestamp'] = pd.to_datetime(data['Timestamp'], errors='coerce')\n",
     "    data.sort_values(by='Timestamp', inplace=True)\n",
     "\n",
-    "    # 3. (Opcional) Resetear el índice después de ordenar\n",
+    "    # (Optional) Reset index after sorting\n",
     "    data.reset_index(drop=True, inplace=True)\n",
     "    data = data[data['Level_pct'] != 0]\n",
     "\n",
-    "    # Intentar convertir columna Timestamp si existe\n",
+    "    # Try to convert Timestamp column if it exists\n",
     "    if 'Timestamp' in data.columns:\n",
     "        try:\n",
     "            data['Timestamp'] = pd.to_datetime(data['Timestamp'])\n",
     "        except Exception as e:\n",
-    "            print('No se pudo convertir \"Timestamp\" a datetime:', e)\n",
+    "            print('Could not convert \"Timestamp\" to datetime:', e)\n",
     "\n",
-    "    print('\\nData combinada creada:')\n",
-    "    print(f\"Filas: {data.shape[0]}, Columnas: {data.shape[1]}\")\n",
+    "    print('\\nCombined data created:')\n",
+    "    print(f\"Rows: {data.shape[0]}, Columns: {data.shape[1]}\")\n",
     "    display(data.head())\n",
     "    display(df.tail())\n",
-    "    # Guardar en variable global `data` para compatibilidad con celdas existentes\n",
-    "    # Si prefieres otro nombre, dime cuál y lo cambio."
+    "    # Saved in global variable `data` for compatibility with existing cells\n",
+    "    # If you prefer another name, tell me and I will change it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5cc9601a",
    "metadata": {},
    "outputs": [
@@ -828,72 +828,72 @@
     "output_dir = \"EDA_Resultados\"\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)\n",
-    "    print(f\"Directorio creado: {output_dir}\")\n",
+    "    print(f\"Directory created: {output_dir}\")\n",
     "else:\n",
-    "    print(f\"Directorio de resultados ya existe: {output_dir}\")\n",
-    "# Restar 10 a 'Valve_Closure_pct' y asegurar que no sea negativo (clip)\n",
+    "    print(f\"Results directory already exists: {output_dir}\")\n",
+    "# Subtract 10 from 'Valve_Closure_pct' and ensure it is not negative (clip)\n",
     "if 'Valve_Closure_pct' in data.columns:\n",
-    "    # Usamos clip(lower=0) para evitar valores negativos\n",
+    "    # Use clip(lower=0) to avoid negative values\n",
     "    data['Valve_Closure_pct'] = (data['Valve_Closure_pct'] - 10).clip(lower=0)\n",
     "else:\n",
-    "    print(\"Advertencia: No se encontró la columna 'Valve_Closure_pct' para restarle 10.\")\n",
+    "    print(\"Warning: Column 'Valve_Closure_pct' not found to subtract 10.\")\n",
     "\n",
     "\n",
-    "# --- 2. Definición de Features y Preparación ---\n",
+    "# --- 2. Definition of Features and Preparation ---\n",
     "print(\"--- 1. Feature Definition ---\")\n",
-    "# Todas las variables se tratan como dinámicas\n",
+    "# All variables are treated as dynamic\n",
     "dynamic_features = [\n",
     "    'Level_pct', 'Control_Signal_pct', 'Setpoint_pct', 'Error_pct', \n",
     "    'Valve_Closure_pct', 'Kp', 'Ki', 'Kd', 'b1', 'a1', 'a2'\n",
     "]\n",
     "\n",
-    "# Filtrar la lista para incluir solo columnas que SÍ existen en el DataFrame\n",
+    "# Filter the list to include only columns that do exist in the DataFrame\n",
     "available_features = [col for col in dynamic_features if col in data.columns]\n",
     "missing_features = [col for col in dynamic_features if col not in data.columns]\n",
     "\n",
     "if missing_features:\n",
-    "    print(f\"Advertencia: Las siguientes columnas no se encontraron y serán ignoradas: {missing_features}\")\n",
+    "    print(f\"Warning: The following columns were not found and will be ignored: {missing_features}\")\n",
     "\n",
-    "# Asegurarse de que las features dinámicas son numéricas\n",
+    "# Ensure dynamic features are numeric\n",
     "data[available_features] = data[available_features].apply(pd.to_numeric, errors='coerce')\n",
     "\n",
     "\n",
-    "# --- 3. Redirección de Salida de Texto ---\n",
-    "# Todo lo que se imprima de aquí en adelante irá al archivo 'eda_report.txt'\n",
+    "# --- 3. Redirect Text Output ---\n",
+    "# Everything printed from here on will go to the file 'eda_report.txt'\n",
     "output_txt_file = os.path.join(output_dir, 'eda_report.txt')\n",
-    "original_stdout = sys.stdout  # Guardar la salida estándar original\n",
+    "original_stdout = sys.stdout  # Save the original standard output\n",
     "\n",
     "try:\n",
     "    with open(output_txt_file, 'w', encoding='utf-8') as f:\n",
-    "        sys.stdout = f  # Redirigir stdout al archivo\n",
+    "        sys.stdout = f  # Redirect stdout to the file\n",
     "\n",
-    "        print(\"--- INFORME DE ANÁLISIS EXPLORATORIO DE DATOS (EDA) ---\")\n",
-    "        print(f\"Fecha de generación: {pd.Timestamp.now()}\")\n",
-    "        print(f\"Directorio de resultados: {os.path.abspath(output_dir)}\")\n",
+    "        print(\"--- EXPLORATORY DATA ANALYSIS (EDA) REPORT ---\")\n",
+    "        print(f\"Generation date: {pd.Timestamp.now()}\")\n",
+    "        print(f\"Results directory: {os.path.abspath(output_dir)}\")\n",
     "        print(\"=\"*50)\n",
     "        \n",
-    "        print(f\"\\nColumnas analizadas como dinámicas: {available_features}\")\n",
+    "        print(f\"\\nColumns analyzed as dynamic: {available_features}\")\n",
     "        if missing_features:\n",
-    "            print(f\"Columnas ignoradas (no encontradas): {missing_features}\")\n",
+    "            print(f\"Ignored columns (not found): {missing_features}\")\n",
     "\n",
     "        # --- 2. Data Quality and Statistics Analysis ---\n",
-    "        print(\"\\n--- 2. Calidad de Datos (Nulos) ---\")\n",
-    "        print(\"Conteo de valores nulos por columna:\")\n",
+    "        print(\"\\n--- 2. Data Quality (Nulls) ---\")\n",
+    "        print(\"Null value count per column:\")\n",
     "        print(data.isnull().sum())\n",
     "\n",
-    "        print(\"\\n--- Estadísticas Descriptivas (Señales Dinámicas) ---\")\n",
-    "        # .to_string() asegura que se imprima el DataFrame completo\n",
+    "        print(\"\\n--- Descriptive Statistics (Dynamic Signals) ---\")\n",
+    "        # .to_string() ensures the full DataFrame is printed\n",
     "        print(data[available_features].describe().to_string())\n",
     "\n",
     "        # --- 5. Dynamic Signal Analysis (The \"Process\") ---\n",
-    "        print(\"\\n--- 5. Análisis de Señales Dinámicas ---\")\n",
+    "        print(\"\\n--- 5. Dynamic Signal Analysis ---\")\n",
     "        \n",
     "        # --- 5.1. Behavior over Time ---\n",
     "        img_path_1 = os.path.join(output_dir, 'eda_plot_01_time_behavior.png')\n",
     "        print(f\"Plotting temporal behavior... -> '{img_path_1}'\")\n",
     "        try:\n",
     "            plot_layout = (len(available_features), 1)\n",
-    "            # Ajustar altura: 2 pulgadas por subplot, mínimo 12\n",
+    "            # Adjust height: 2 inches per subplot, minimum 12\n",
     "            fig_height = max(12, len(available_features) * 2) \n",
     "            \n",
     "            axes = data.plot(y=available_features, \n",
@@ -902,31 +902,31 @@
     "                           layout=plot_layout,\n",
     "                           title='Behavior of Dynamic Signals')\n",
     "            \n",
-    "            # Aplanar los ejes para acceder al último\n",
+    "            # Flatten the axes to access the last one\n",
     "            flat_axes = axes.flatten()\n",
     "            flat_axes[-1].set_xlabel('Sample Index (Time)')\n",
     "            \n",
-    "            plt.suptitle('Comportamiento Temporal de Señales Dinámicas', fontsize=16)\n",
-    "            plt.tight_layout(rect=[0, 0.03, 1, 0.97]) # Ajustar para el suptitle\n",
+    "            plt.suptitle('Temporal Behavior of Dynamic Signals', fontsize=16)\n",
+    "            plt.tight_layout(rect=[0, 0.03, 1, 0.97]) # Adjust for the suptitle\n",
     "            plt.savefig(img_path_1, bbox_inches='tight')\n",
-    "            #plt.close() # Cerrar la figura para liberar memoria\n",
-    "            print(\"Gráfico 1 guardado.\")\n",
+    "            #plt.close() # Close the figure to free memory\n",
+    "            print(\"Figure 1 saved.\")\n",
     "        except Exception as e:\n",
-    "            print(f\"Error al guardar Gráfico 1 (Behavior): {e}\")\n",
+    "            print(f\"Error saving Figure 1 (Behavior): {e}\")\n",
     "\n",
     "\n",
     "        # --- 5.2. Distributions ---\n",
     "        img_path_2 = os.path.join(output_dir, 'eda_plot_02_distributions.png')\n",
     "        print(f\"Plotting distributions... -> '{img_path_2}'\")\n",
     "        try:\n",
-    "            # Layout de 2 columnas: calcular número de filas necesarias\n",
+    "            # 2-column layout: calculate required number of rows\n",
     "            n_cols = 2\n",
-    "            n_rows = (len(available_features) + 1) // 2  # redondear hacia arriba\n",
-    "            fig_height = max(10, n_rows * 3)  # 3 pulgadas por fila\n",
+    "            n_rows = (len(available_features) + 1) // 2  # round up\n",
+    "            fig_height = max(10, n_rows * 3)  # 3 inches per row\n",
     "            \n",
     "            axes = data[available_features].hist(bins=50, figsize=(12, fig_height), alpha=0.7, layout=(n_rows, n_cols))\n",
     "            \n",
-    "            # Ajustar límites del eje x al rango de los datos para cada subplot y agregar labels en inglés\n",
+    "            # Adjust x-axis limits to the data range for each subplot and add labels in English\n",
     "            flat_axes = axes.flatten()\n",
     "            for i, col in enumerate(available_features):\n",
     "                if i < len(flat_axes):\n",
@@ -944,15 +944,15 @@
     "            plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "            plt.savefig(img_path_2, bbox_inches='tight')\n",
     "            #plt.close()\n",
-    "            print(\"Plot 2 guardado.\")\n",
+    "            print(\"Figure 2 saved.\")\n",
     "        except Exception as e:\n",
-    "            print(f\"Error al guardar Gráfico 2 (Distributions): {e}\")\n",
+    "            print(f\"Error saving Figure 2 (Distributions): {e}\")\n",
     "\n",
     "        # --- 5.3. Correlation Matrix ---\n",
     "        img_path_3 = os.path.join(output_dir, 'eda_plot_03_correlation_matrix.png')\n",
     "        print(f\"Calculating correlation matrix... -> '{img_path_3}'\")\n",
     "        try:\n",
-    "            # Ajustar tamaño basado en número de features\n",
+    "            # Adjust size based on number of features\n",
     "            fig_size = max(10, len(available_features) * 0.8) \n",
     "            plt.figure(figsize=(fig_size, fig_size * 0.75))\n",
     "            \n",
@@ -961,42 +961,42 @@
     "            plt.title('Correlation Matrix of Dynamic Signals')\n",
     "            plt.savefig(img_path_3, bbox_inches='tight')\n",
     "            #plt.close()\n",
-    "            print(\"Gráfico 3 guardado.\")\n",
+    "            print(\"Figure 3 saved.\")\n",
     "        except Exception as e:\n",
-    "            print(f\"Error al guardar Gráfico 3 (Correlation): {e}\")\n",
+    "            print(f\"Error saving Figure 3 (Correlation): {e}\")\n",
     "\n",
     "        # --- 6. (HIGHLY RECOMMENDED) Coherence Checks ---\n",
-    "        print(\"\\n--- 6. Verificaciones de Coherencia ---\")\n",
+    "        print(\"\\n--- 6. Coherence Checks ---\")\n",
     "\n",
     "        # --- 6.1. Is 'Error_pct' (Setpoint - Level)? ---\n",
     "        if 'Error_pct' in data.columns and 'Setpoint_pct' in data.columns and 'Level_pct' in data.columns:\n",
     "            data['Calculated_Error'] = data['Setpoint_pct'] - data['Level_pct']\n",
     "            error_diff = (data['Error_pct'] - data['Calculated_Error']).abs().sum()\n",
     "            \n",
-    "            if error_diff < 1e-5: # Usar tolerancia por errores de punto flotante\n",
-    "                print(\"Coherencia (6.1): 'Error_pct' SÍ es (Setpoint_pct - Level_pct). ¡Bien!\")\n",
+    "            if error_diff < 1e-5: # Use tolerance for floating-point errors\n",
+    "                print(\"Coherence (6.1): 'Error_pct' IS (Setpoint_pct - Level_pct). Good!\")\n",
     "            else:\n",
-    "                print(\"¡Atención (6.1)! 'Error_pct' NO coincide con (Setpoint_pct - Level_pct).\")\n",
-    "                print(f\"Suma de la diferencia absoluta: {error_diff}\")\n",
+    "                print(\"Attention (6.1)! 'Error_pct' does NOT match (Setpoint_pct - Level_pct).\")\n",
+    "                print(f\"Sum of absolute difference: {error_diff}\")\n",
     "                \n",
     "                img_path_4 = os.path.join(output_dir, 'eda_plot_04_error_difference.png')\n",
     "                print(f\"Plotting error difference... -> '{img_path_4}'\")\n",
     "                try:\n",
     "                    plt.figure(figsize=(12, 3))\n",
     "                    (data['Error_pct'] - data['Calculated_Error']).plot(title='Difference between Error_pct and (SP - LV)')\n",
-    "                    plt.ylabel(\"Diferencia\")\n",
+    "                    plt.ylabel(\"Difference\")\n",
     "                    plt.xlabel(\"Sample Index\")\n",
     "                    plt.grid(True)\n",
     "                    plt.savefig(img_path_4, bbox_inches='tight')\n",
     "                    #plt.close()\n",
-    "                    print(\"Gráfico 4 (Error Diff) guardado.\")\n",
+    "                    print(\"Figure 4 (Error Diff) saved.\")\n",
     "                except Exception as e:\n",
-    "                    print(f\"Error al guardar Gráfico 4 (Error Diff): {e}\")\n",
+    "                    print(f\"Error saving Figure 4 (Error Diff): {e}\")\n",
     "            \n",
     "            # Clean up temporary column\n",
     "            data = data.drop(columns=['Calculated_Error'])\n",
     "        else:\n",
-    "            print(\"No se pudo realizar la verificación de coherencia 6.1 (faltan columnas).\")\n",
+    "            print(\"Could not perform coherence check 6.1 (missing columns).\")\n",
     "\n",
     "\n",
     "        # --- 6.2. How are Control_Signal_pct and Valve_Closure_pct related? ---\n",
@@ -1010,21 +1010,21 @@
     "                plt.grid(True)\n",
     "                plt.savefig(img_path_5, bbox_inches='tight')\n",
     "                #plt.close()\n",
-    "                print(\"Gráfico 5 (Control vs Valve) guardado.\")\n",
+    "                print(\"Figure 5 (Control vs Valve) saved.\")\n",
     "            except Exception as e:\n",
-    "                print(f\"Error al guardar Gráfico 5 (Control vs Valve): {e}\")\n",
+    "                print(f\"Error saving Figure 5 (Control vs Valve): {e}\")\n",
     "        else:\n",
-    "            print(\"No se pudo realizar la verificación de coherencia 6.2 (faltan columnas).\")\n",
+    "            print(\"Could not perform coherence check 6.2 (missing columns).\")\n",
     "\n",
-    "        print(\"\\n--- FIN DEL INFORME EDA ---\")\n",
+    "        print(\"\\n--- END OF EDA REPORT ---\")\n",
     "\n",
     "finally:\n",
-    "    # Restaurar la salida estándar original para poder ver los prints finales\n",
+    "    # Restore original standard output to see the final prints\n",
     "    sys.stdout = original_stdout\n",
     "\n",
-    "print(f\"\\n¡Análisis EDA completado!\")\n",
-    "print(f\"Los resultados se han guardado en la carpeta: {os.path.abspath(output_dir)}\")\n",
-    "print(f\"Informe de texto: {output_txt_file}\")"
+    "print(f\"\\nEDA analysis completed!\")\n",
+    "print(f\"Results saved in: {os.path.abspath(output_dir)}\")\n",
+    "print(f\"Text report: {output_txt_file}\")"
    ]
   }
  ],
